--- a/Day_3.ipynb
+++ b/Day_3.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9IlTtLZpAN8jSWgcZ7Qov",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOuL0LcTqq/LqMPBXCpi3VP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -137,10 +138,57 @@
     {
       "cell_type": "code",
       "source": [
-        "#write a function to calculate the grades of a student based on their marks\n"
+        "#write a function to calculate the grades of a student based on their marks\n",
+        "def grade(marks):\n",
+        "  marks=int(input(\"enter the marks\"))\n",
+        "  if marks>90 and marks<=100:\n",
+        "    print(\"0\")\n",
+        "  elif marks>=80 and marks<=89:\n",
+        "    print(\"A+\")\n",
+        "  elif marks>=70 and marks<=79:\n",
+        "    print(\"B+\")\n",
+        "  elif marks>=60 and marks<=69:\n",
+        "    print(\"C+\")\n",
+        "  elif marks>=50 and marks<=59:\n",
+        "    print(\"C+\")\n",
+        "  else:\n",
+        "      print(\"fail\")\n",
+        "\n",
+        "for i in range(10):\n",
+        " grade(marks)\n"
       ],
       "metadata": {
-        "id": "zUzMTXdkrgay"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zUzMTXdkrgay",
+        "outputId": "ba8839d1-329a-4f8b-e848-a3508d0c9e99"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the marks78\n",
+            "B+\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#patterns using loops\n",
+        "count=1\n",
+        "for i in range(1,5,1):\n",
+        "  for j in range(i):\n",
+        "    print(count,end=\" \")\n",
+        "    count+=1\n",
+        "    print(\"/n\")\n"
+      ],
+      "metadata": {
+        "id": "pQmZL2rbWU7s"
       },
       "execution_count": null,
       "outputs": []
